# my_beginner_tutorials

./: .gitignore  CMakeLists.txt  README.md  package.xml
.cache/clangd/index/: listener.cpp.47875DCEEA275CC6.idx  talker.cpp.D8F2FDD28D35404B.idx
launch/: nodes.launch.py  record_bag.launch.py
outputs/: cpplint.txt
outputs/rosbag2_2024_11_14-20_00_13/: bag.db3  metadata.yaml
src/: listener.cpp  talker.cpp  test_talker.cpp
